--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -5,6 +5,7 @@
  */
 html {
   box-sizing: border-box;
+  font-family: 'Roboto Condensed', sans-serif;
 }
 *, *:before, *:after {
   box-sizing: inherit;
@@ -18,6 +19,18 @@ body {
   margin: 0;
   color: #244751;
   background-color: #eee;
+  height: 100%;
+}
+
+main.container {
+  position: relative;
+  top: 0px;
+  width: 450px;
+  height: 100vh;
+  background-color: white;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 100px;
 }
 
 /*
