Connected to MongoDB database

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -4,11 +4,13 @@
     right: 0;
     left: 0;
     z-index: 1000;
-    height:; 80px;
+    height: 80px;
     width: 100vw;
     background-color: #00a087;
     padding-left: 2em;
     padding-right: 2em;
+    display: flex;
+    justify-content: space-between;
 }
 
 #nav-bar .logo {
@@ -32,4 +34,9 @@
     margin: 10px 80px;
     float: right;
     border-radius: 5px;
+}
+
+#nav-bar #page-name {
+    display: flex;
+    justify-content: flex-start;
 }
