--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -6,7 +6,7 @@
   border-radius: 5px;
   background-color: #C0C0C0;
   justify-content: flex-end;
-  display:none;
+  display: none;
 }
 
 .new-tweet h5 {
@@ -17,6 +17,7 @@
 
 textarea {
   width: 96%;
+  height: 60px;
   margin-left: 8px;
 }
 
@@ -33,9 +34,10 @@ input {
 }
 
 .counter {
-  padding: 8px
+  padding: 8px;
   height: 40px;
-  margin-left: 292px;
+  display: flex;
+  justify-content: right;
 }
 
 article.tweet {
@@ -63,18 +65,17 @@ article.tweet .tweet-header {
   margin: 0px;
   padding: 8px;
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: flex-start;
 }
 
 article.tweet h2 {
-  margin: 4px 8px;
+  margin: 0px 0px;
 }
 
-article.tweet .tweeter-user {
-  margin-left: 148px;
-  margin-right: 0px;
-  margin-top: 6px;
+.tweeter-user {
+  margin: 5px;
+  font-size: 14px;
   opacity: 0.6;
 }
 
@@ -83,16 +84,15 @@ article.tweet .tweet-header .profile-pics {
     justify-content: flex-start;
     width: 50px;
     height: 50px;
-    margin: 2px;
+    margin-right: 6px;
     float: left;
     border-radius: 5px;
     border: 1px solid #C0C0C0;
 }
 
 article.tweet .content {
-  margin: 8px;
-  height: 40px;
-  word-break: break-word; /*this not working -- fix for long word tweets*/
+  padding: 8px;
+  word-break: break-word;
 }
 
 article.tweet .tweet-footer {
@@ -100,6 +100,7 @@ article.tweet .tweet-footer {
   width: 100%;
   height: 40px;
   display: flex;
+  justify-content: space-between;
   align-items: center;
   padding: 8px;
   border: black;
@@ -108,12 +109,22 @@ article.tweet .tweet-footer {
 }
 
 .social-links {
-  margin-left: 282px;
   font-size: 14px;
   opacity: 0;
+}
+
+.social-links i {
+  margin-right: 3px;
 }
 
 article.tweet:hover .social-links{
     opacity: 1;
     color: #40E0D0;
+}
+
+.footer-newTweet {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px;
 }
