--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -16,23 +16,19 @@ html {
  */
 
 body {
-  margin: 0;
+  padding: 20px;
   color: #244751;
   background-color: #eee;
-  height: 100%;
+  min-height: 100%;
 }
 
 main.container {
   position: relative;
   top: 0px;
   width: 450px;
-  height: 100vh;
+  min-height: 100%;
   background-color: white;
   margin-left: auto;
   margin-right: auto;
   padding-top: 100px;
 }
-
-/*
- * Additional CSS can be defined below or in other CSS files, as per instructions
- */
