--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,130 +1,44 @@
+/* New tweet box */
 .new-tweet {
   width: 400px;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 30px;
   border: 1px solid grey;
-  border-radius: 5px;
+  border-radius: 10px;
   background-color: #C0C0C0;
-  justify-content: flex-end;
   display: none;
 }
 
+/* New tweet box header */
+.new-tweet h2 {
+  margin: 20px 8px 14px;
+  border-bottom: 2px solid #244751;
+}
+
+/* New tweet box - invalid tweet error messages */
 .new-tweet h5 {
   color: red;
   margin: 10px;
 }
 
-
+/* New tweet box - enter tweet box */
 textarea {
   width: 96%;
   height: 60px;
-  margin-left: 8px;
+  margin: 2px 8px;
 }
 
-.new-tweet h2 {
-  border-bottom: 2px solid #244751;
-  margin-left: 8px;
-  margin-right: 8px;
-  margin-bottom: 14px;
+/* Submit buttom and counter */
+.new-tweet .footer-newTweet {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 4px 8px 24px;
 }
 
+/* New tweet box - "submit" tweet button */
 input {
-  margin: 8px;
   height: 30px;
 }
 
-.counter {
-  padding: 8px;
-  height: 40px;
-  display: flex;
-  justify-content: right;
-}
-
-article.tweet {
-  width: 400px;
-  margin-top: 30px;
-  margin-bottom: 30px;
-  margin-left: auto;
-  margin-right: auto;
-  border-color: black;
-  border-radius: 5px;
-  background-color: white;
-  border-radius: 5px;
-  justify-content: flex-end;
-  border: 1px solid grey;
-  opacity: 0.6;
-}
-
-article.tweet:hover {
-  opacity: 1;
-}
-
-article.tweet .tweet-header {
-  background-color: #eee;
-  width: 100%;
-  margin: 0px;
-  padding: 8px;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-}
-
-article.tweet h2 {
-  margin: 0px 0px;
-}
-
-.tweeter-user {
-  margin: 5px;
-  font-size: 14px;
-  opacity: 0.6;
-}
-
-article.tweet .tweet-header .profile-pics {
-    display: flex;
-    justify-content: flex-start;
-    width: 50px;
-    height: 50px;
-    margin-right: 6px;
-    float: left;
-    border-radius: 5px;
-    border: 1px solid #C0C0C0;
-}
-
-article.tweet .content {
-  padding: 8px;
-  word-break: break-word;
-}
-
-article.tweet .tweet-footer {
-  background-color: white;
-  width: 100%;
-  height: 40px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 8px;
-  border: black;
-  border-top: 1px solid grey;
-  font-size: 10px;
-}
-
-.social-links {
-  font-size: 14px;
-  opacity: 0;
-}
-
-.social-links i {
-  margin-right: 3px;
-}
-
-article.tweet:hover .social-links{
-    opacity: 1;
-    color: #40E0D0;
-}
-
-.footer-newTweet {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 5px;
-}
